Add Image and Edit index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h2>DoNotSleep</h2>
+    <img src="/resources/school.png" width="100px" height="100px">
+    <h1>졸방대 예약 시스템</h1>
+    <table>
+        <tr>
+            <th>아이디</th>
+            <td><input type="text" name="id" id="id" placeholder="아이디"></td>
+        </tr>
+        <tr>
+            <th>비밀번호</th>
+            <td><input type="password" name="pw" id="pw" placeholder="비밀번호"></td>
+        </tr>
+    </table>
+
 </body>
 </html>
