아이디를 학번으로 수정함

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <img src="/resources/school.png" width="100px" height="100px">
-    <h1>졸방대 예약 시스템</h1>
+    <h1>1-1 졸방대 예약 시스템</h1>
     <table>
         <tr>
-            <th>아이디</th>
-            <td><input type="text" name="id" id="id" placeholder="아이디"></td>
+            <th>학번</th>
+            <td><input type="text" name="id" id="id" placeholder="학번"></td>
         </tr>
         <tr>
             <th>비밀번호</th>
