--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>1-1 졸방대 예약 시스템</title>
 </head>
 <body>
     <img src="/resources/school.png" width="100px" height="100px">
-    <h1>1-1 졸방대 예약 시스템</h1>
+    <h1 id="title">1-1 졸방대 예약 시스템</h1>
     <table>
         <tr>
             <th>학번</th>
@@ -17,6 +17,9 @@
         <tr>
             <th>비밀번호</th>
             <td><input type="password" name="pw" id="pw" placeholder="비밀번호"></td>
+        </tr>
+        <tr>
+            <th colspan="3"><button>로그인</button></th>
         </tr>
     </table>
 
