--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
 <body>
     <img src="/resources/school.png" width="100px" height="100px">
     <h1 id="title">1-1 졸방대 예약 시스템</h1>
-    <table>
+    <table id="zolbangdae">
         <tr>
-            <th>학번</th>
-            <td><input type="text" name="id" id="id" placeholder="학번"></td>
+            <button id="num1"></button> 
         </tr>
         <tr>
-            <th>비밀번호</th>
-            <td><input type="password" name="pw" id="pw" placeholder="비밀번호"></td>
+            <button id="num2"></button>
         </tr>
         <tr>
-            <th colspan="3"><button>로그인</button></th>
+            <button id="num3"></button>
+        </tr>
+        <tr>
+            <button id="num4"></button>
+        </tr>
+        <tr>
+            <button id="num5"></button>
         </tr>
     </table>
 
