--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1-1 졸방대 예약 시스템</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <img src="/resources/school.png" width="100px" height="100px">
     <h1 id="title">1-1 졸방대 예약 시스템</h1>
     <table id="zolbangdae">
         <tr>
-            <button id="num1"></button> 
+            <button type="submit" id="num1">①</button> 
         </tr>
         <tr>
-            <button id="num2"></button>
+            <button type="submit" id="num2">②</button>
         </tr>
         <tr>
-            <button id="num3"></button>
+            <button type="submit" id="num3">③</button>
         </tr>
         <tr>
-            <button id="num4"></button>
+            <button type="submit" id="num4" disabled>④</button>
         </tr>
         <tr>
-            <button id="num5"></button>
+            <button type="submit" id="num5" disabled>⑤</button>
         </tr>
     </table>
 
