전반적인 수정 완료

--- a/index.html
+++ b/index.html
@@ -10,23 +10,69 @@
 <body>
     <img src="/resources/school.png" width="100px" height="100px">
     <h1 id="title">1-1 졸방대 예약 시스템</h1>
-    <table id="zolbangdae">
-        <tr>
-            <button type="submit" id="num1">①</button> 
-        </tr>
-        <tr>
-            <button type="submit" id="num2">②</button>
-        </tr>
-        <tr>
-            <button type="submit" id="num3">③</button>
-        </tr>
-        <tr>
-            <button type="submit" id="num4" disabled>④</button>
-        </tr>
-        <tr>
-            <button type="submit" id="num5" disabled>⑤</button>
-        </tr>
-    </table>
+    <div id="zolbangdae">
+        <table id="ui">
+            <tr>
+                <table>
+                    <td><button type="submit" id="num1">①</button></td>
+                    <td><button type="submit" id="num2">②</button></td>
+                    <td><button type="submit" id="num3">③</button></td>
+                    <td><button type="submit" id="num4" disabled>④</button></td>
+                    <td><button type="submit" id="num5" disabled>⑤</button></td>
+                </table>
+            </tr>
+            <tr>
+                <table id="timetable">
+                    <td id="1">
+                        <p id="1class1">1교시 : 없음</p>
+                        <p id="1class2">2교시 : 없음</p>
+                        <p id="1class3">3교시 : 없음</p>
+                        <p id="1class4">4교시 : 없음</p>
+                        <p id="1class5">5교시 : 없음</p>
+                        <p id="1class6">6교시 : 없음</p> 
+                        <p id="1class7">7교시 : 없음</p>
+                    </td>
+                    <td id="2">
+                        <p id="2class1">1교시 : 없음</p>
+                        <p id="2class2">2교시 : 없음</p>
+                        <p id="2class3">3교시 : 없음</p>
+                        <p id="2class4">4교시 : 없음</p>
+                        <p id="2class5">5교시 : 없음</p>
+                        <p id="2class6">6교시 : 없음</p> 
+                        <p id="2class7">7교시 : 없음</p>
+                    </td>
+                    <td id="3">
+                        <p id="3class1">1교시 : 없음</p>
+                        <p id="3class2">2교시 : 없음</p>
+                        <p id="3class3">3교시 : 없음</p>
+                        <p id="3class4">4교시 : 없음</p>
+                        <p id="3class5">5교시 : 없음</p>
+                        <p id="3class6">6교시 : 없음</p> 
+                        <p id="3class7">7교시 : 없음</p>
+                    </td>
+                    <td id="4">
+                        <p id="4class1">1교시 : 없음</p>
+                        <p id="4class2">2교시 : 없음</p>
+                        <p id="4class3">3교시 : 없음</p>
+                        <p id="4class4">4교시 : 없음</p>
+                        <p id="4class5">5교시 : 없음</p>
+                        <p id="4class6">6교시 : 없음</p> 
+                        <p id="4class7">7교시 : 없음</p>
+                    </td>
+                    <td id="5">
+                        <p id="5class1">1교시 : 없음</p>
+                        <p id="5class2">2교시 : 없음</p>
+                        <p id="5class3">3교시 : 없음</p>
+                        <p id="5class4">4교시 : 없음</p>
+                        <p id="5class5">5교시 : 없음</p>
+                        <p id="5class6">6교시 : 없음</p> 
+                        <p id="5class7">7교시 : 없음</p>
+                    </td>
+                </table>
+            </tr> 
+        </table>
+    </div>
+
 
 </body>
 </html>
