--- a/num1.html
+++ b/num1.html
@@ -8,35 +8,37 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h1 id="title_1">1번 졸방대 예약</h1>
-    <input type="text" name="" id="id" placeholder="학번" style="font-size: 20px; width: 200px;">
-    <br>
-    <input type="password" name="" id="pw" placeholder="비밀번호" style="font-size: 20px; width: 200px;">
-    <br>
-    <table id="zol1">
-        <tr>
-            <td><input type="checkbox" name="" id="zol1"> 1교시</td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" name="" id="zol2"> 2교시</td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" name="" id="zol3"> 3교시</td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" name="" id="zol4"> 4교시</td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" name="" id="zol5"> 5교시</td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" name="" id="zol6"> 6교시</td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" name="" id="zol7"> 7교시</td>
-        </tr>
-    </table>
-    <br>
-    <button id="correct1" type="submit" style="font-size: 20px; width: 200px;">확인</button>
+    <form method="post" action="./post1.php">
+        <h1 id="title_1">1번 졸방대 예약</h1>
+        <input type="text" name="name" id="id" placeholder="이름" style="font-size: 20px; width: 200px;">
+        <br>
+        <input type="password" name="pw" id="pw" placeholder="비밀번호" style="font-size: 20px; width: 200px;">
+        <br>
+        <table id="zol1">
+           <tr>
+              <td><input type="checkbox" name="list[]" id="zol1"> 1교시</td>
+         </tr>
+            <tr>
+                <td><input type="checkbox" name="list[]" id="zol2"> 2교시</td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" name="list[]" id="zol3"> 3교시</td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" name="list[]" id="zol4"> 4교시</td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" name="list[]" id="zol5"> 5교시</td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" name="list[]" id="zol6"> 6교시</td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" name="list[]" id="zol7"> 7교시</td>
+          </tr>
+        </table>
+        <br>
+        <button id="correct1" type="submit" style="font-size: 20px; width: 200px;">확인</button>
+    </form>
 </body>
 </html>
